--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Contrato Avante- Las Lajas.pdf
 20200511_Reseervas Quarzo_Novazul_.xlsx
 Leads Las Lajas.xlsx
 190830  Modelo Financiero Avante - Las Lajas.xlsx
+Las Lajas Brochure Digital.pdf
