Quitamos los pdfs.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 .Rhistory
 .RData
 .Ruserdata
-Contrato Avante- Las Lajas.pdf
 20200511_Reseervas Quarzo_Novazul_.xlsx
 Leads Las Lajas.xlsx
 190830  Modelo Financiero Avante - Las Lajas.xlsx
 Las Lajas Brochure Digital.pdf
+Novazul.pdf
+Quarzo.pdf
